# NESEmu

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
apps/NESEmuGUI/: CMakeLists.txt
apps/NESEmuGUI/src/: main.cpp
libs/NESEmuCore/: CMakeLists.txt
libs/NESEmuCore/include/NESEmuCore/: bus.hpp  bus_mappable.hpp  cartridge.hpp  clock.hpp  cpu6502.hpp  cpu_6502.hpp  debug_format.hpp  dma.hpp  emu_types.hpp  interrupt_lines.hpp  mapper_nrom.hpp  memory.hpp  ppu.hpp  rp2a03.hpp  system.hpp
libs/NESEmuCore/src/: bus.cpp  cartridge.cpp  cpu6502.cpp  cpu_6502.cpp  dma.cpp  mapper_nrom.cpp  ppu.cpp  rp2a03.cpp  system.cpp
test/NESEmuCoreTests/: CMakeLists.txt
test/NESEmuCoreTests/data/rom/: AccuracyCoin.nes  invalid_rom.nes
test/NESEmuCoreTests/include/: cpu_step_tests.hpp  opcode_descriptors.hpp  test_bus.hpp  test_memory.hpp
test/NESEmuCoreTests/src/: cartridge_tests.cpp  cpu6502_tests.cpp  cpu_6502_tests.cpp  dma_tests.cpp  ppu_tests.cpp  system_tests.cpp
